--- a/MyTrax/SupportingFiles/Info.plist
+++ b/MyTrax/SupportingFiles/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>Go Moto</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -30,7 +32,7 @@
 	<key>FacebookAppID</key>
 	<string>844168775742619</string>
 	<key>FacebookDisplayName</key>
-	<string>MyTrax</string>
+	<string>Go Moto</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
